# respan-redteam

./: .gitignore  LICENSE  README.md  SETUP  justfile  pyproject.toml
.github/workflows/: publish.yml
examples/: adapter_fabraix.py  adapter_local.py  adapter_session.py
respan_redteam/: __init__.py  campaign.py  cli.py  config.py  credentials.py  events.py  extensions.py  goals.py  judge.py  model_client.py  models.py  recon.py  report.py  runtime.py  target.py  tui.py  tui_test.py  user_config.py
respan_redteam/carriers/: __init__.py  builtins.py  core.py
respan_redteam/execution/: __init__.py  agentic.py  attacker.py  single_turn.py
respan_redteam/prompts/: __init__.py  core.py  framings.py
respan_redteam/strategies/: __init__.py  breadth.py  bypass.py  core.py  crescendo.py  exfiltration.py  framing.py  indirect_injection.py  premium.py  refund_abuse.py  ssrf.py  structured_extraction.py  tool_chain.py
tests/: test_cli.py  test_fabraix_adapter.py  test_premium_strategies.py  test_session_waist.py  test_user_config.py
